build(search):Search module configuration

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>mall-security</module>
         <module>mall-admin</module>
         <module>mall-portal</module>
+        <module>mall-search</module>
     </modules>
 
     <parent>
